seção 25: localstorage - code refactory

--- a/localstorage/aula23.html
+++ b/localstorage/aula23.html
@@ -35,20 +35,8 @@
 							<th>Média</th>
 						</tr>
 					</thead>
-					<tbody id="listaAlunos">
-						<tr class="aluno" >
-							<td class="aluno-nome">Gertrude</td>
-							<td class="aluno-n1">10</td>
-							<td class="aluno-n2">8.5</td>
-							<td class="aluno-n3">9</td>
-							<td class="aluno-n4">7.5</td>	
-							<td class="aluno-m"></td>
-						</tr>
-
-						
-					</tbody>
+					<tbody id="listaAlunos"></tbody>
 				</table>
-	        	
         	</div>	
         </section>
 <!-- 
