advanced js final course

--- a/ajax/multiple_requests_fetch_async_await.html
+++ b/ajax/multiple_requests_fetch_async_await.html
@@ -66,6 +66,7 @@
                   let text = document.createTextNode(str);
                   el.appendChild(text);
                   container.appendChild(el);
+                  document.crea
               });
           }
           getUser(1)
